update scss, js, and html

--- a/article1.html
+++ b/article1.html
@@ -12,9 +12,7 @@
     <!-- <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design"> -->
 
     <!-- FontAwesome V5 -->
-    <link rel="stylesheet" href="scrollbar.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="article.css">
+    <link rel="stylesheet" href="CSS/compiled_style.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -24,8 +22,12 @@
         </div>
         <div class="nav-right">
             <a href="/">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            <!-- Dark Mode Switch -->
+            <div id="theme-switcher" class="theme-switcher">
+                <i class="fas fa-sun"></i>
+            </div>  
         </div>
     </nav>
     <!-- End of Navbar -->
