--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- FontAwesome V5 -->
     <link rel="stylesheet" href="scrollbar.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/compiled_style.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -25,6 +25,11 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
+            <!-- Dark Mode Switch -->
+            <div id="theme-switcher" class="theme-switcher">
+                <i class="fas fa-sun"></i>
+            </div>  
+        </div>  
         </div>
     </nav>
     <!-- End of Navbar -->
